// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dotLayout: >  computedAmazonView 1`] = `
{
  "autoLayout": "TB",
  "boundingBox": {
    "height": 592,
    "width": 395,
    "x": 0,
    "y": 0,
  },
  "edges": [
    {
      "headArrow": [
        [
          201,
          361,
        ],
        [
          198,
          371,
        ],
        [
          195,
          361,
        ],
      ],
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            198,
            307,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          198,
          243,
        ],
        [
          198,
          280,
        ],
        [
          198,
          323,
        ],
        [
          198,
          361,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon.s3",
    },
  ],
  "height": 592,
  "id": "amazon",
  "nodes": [
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "AMAZON",
          "width": 53,
        },
      ],
      "parent": null,
      "position": [
        11,
        323,
      ],
      "shape": "rectangle",
      "size": {
        "height": 259,
        "width": 373,
      },
      "title": "Amazon",
    },
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        11,
        11,
      ],
      "shape": "rectangle",
      "size": {
        "height": 259,
        "width": 373,
      },
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            123,
            95,
          ],
          "text": "Backend",
          "width": 68,
        },
      ],
      "parent": "cloud",
      "position": [
        38,
        63,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "id": "amazon.s3",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            146,
            82,
          ],
          "text": "S3",
          "width": 22,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            90,
            112,
          ],
          "text": "S3 is a storage service",
          "width": 135,
        },
      ],
      "parent": "amazon",
      "position": [
        38,
        375,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "S3",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud",
          "isDescedants": false,
        },
        {
          "source": {
            "element": "cloud",
            "isDescedants": true,
          },
          "target": {
            "element": "amazon",
            "isDescedants": false,
          },
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "amazon",
  "width": 395,
}
`;

exports[`dotLayout: >  computedCloud3levels 1`] = `
{
  "autoLayout": "TB",
  "boundingBox": {
    "height": 1158,
    "width": 978,
    "x": 0,
    "y": 0,
  },
  "edges": [
    {
      "headArrow": [
        [
          396,
          646,
        ],
        [
          387,
          649,
        ],
        [
          392,
          641,
        ],
      ],
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            508,
            570,
          ],
          "text": "fetches data in zero trust network with sso",
          "width": 249,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            508,
            586,
          ],
          "text": "authentification",
          "width": 90,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          581,
          506,
        ],
        [
          523,
          549,
        ],
        [
          454,
          600,
        ],
        [
          395,
          643,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          260,
          637,
        ],
        [
          257,
          647,
        ],
        [
          254,
          637,
        ],
      ],
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            255,
            576,
          ],
          "text": "fetches data",
          "width": 73,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          250,
          506,
        ],
        [
          252,
          547,
        ],
        [
          255,
          596,
        ],
        [
          257,
          638,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          726,
          965,
        ],
        [
          723,
          974,
        ],
        [
          720,
          965,
        ],
      ],
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            723,
            922,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          723,
          832,
        ],
        [
          723,
          873,
        ],
        [
          723,
          922,
        ],
        [
          723,
          965,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          249,
          313,
        ],
        [
          246,
          322,
        ],
        [
          243,
          313,
        ],
      ],
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            246,
            244,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          246,
          181,
        ],
        [
          246,
          222,
        ],
        [
          246,
          271,
        ],
        [
          246,
          313,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "headArrow": [
        [
          706,
          313,
        ],
        [
          703,
          322,
        ],
        [
          700,
          313,
        ],
      ],
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            703,
            244,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          703,
          181,
        ],
        [
          703,
          222,
        ],
        [
          703,
          271,
        ],
        [
          703,
          313,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "headArrow": [
        [
          533,
          738,
        ],
        [
          542,
          741,
        ],
        [
          533,
          744,
        ],
      ],
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "labels": [],
      "parent": "cloud.backend",
      "points": [
        [
          447,
          741,
        ],
        [
          475,
          741,
        ],
        [
          504,
          741,
        ],
        [
          533,
          741,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
  ],
  "height": 1158,
  "id": "cloud3levels",
  "nodes": [
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        11,
        261,
      ],
      "shape": "rectangle",
      "size": {
        "height": 637,
        "width": 956,
      },
      "title": "cloud",
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "id": "cloud.backend",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "BACKEND",
          "width": 60,
        },
      ],
      "parent": "cloud",
      "position": [
        51,
        599,
      ],
      "shape": "rectangle",
      "size": {
        "height": 259,
        "width": 876,
      },
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            121,
            95,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        86,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            109,
            74,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            32,
            104,
          ],
          "text": "Support engineers are responsible for supporting",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            146,
            120,
          ],
          "text": "customers",
          "width": 62,
        },
      ],
      "parent": null,
      "position": [
        524,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 358,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            126,
            82,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            78,
            112,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        563,
        978,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "id": "cloud.frontend.adminPanel",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            93,
            74,
          ],
          "text": "Admin Panel Webapp",
          "width": 168,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            32,
            104,
          ],
          "text": "The admin panel is a webapp that allows support",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            85,
            120,
          ],
          "text": "staff to manage customer data.",
          "width": 184,
        },
      ],
      "parent": "cloud",
      "position": [
        524,
        326,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 358,
      },
      "title": "Admin Panel Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "id": "cloud.frontend.dashboard",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            60,
            74,
          ],
          "text": "Customer Dashboard Webapp",
          "width": 235,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            33,
            104,
          ],
          "text": "The customer dashboard is a webapp that allows",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            93,
            120,
          ],
          "text": "customers to view their data.",
          "width": 170,
        },
      ],
      "parent": "cloud",
      "position": [
        66,
        326,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 359,
      },
      "title": "Customer Dashboard Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "id": "cloud.backend.graphql",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            135,
            82,
          ],
          "text": "Graphql API",
          "width": 95,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            33,
            112,
          ],
          "text": "Component that allows to query data via GraphQL.",
          "width": 301,
        },
      ],
      "parent": "cloud.backend",
      "position": [
        77,
        651,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 369,
      },
      "title": "Graphql API",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "id": "cloud.backend.storage",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            108,
            74,
          ],
          "text": "Backend Storage",
          "width": 133,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            32,
            104,
          ],
          "text": "The backend storage is a component that stores",
          "width": 286,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            160,
            120,
          ],
          "text": "data.",
          "width": 30,
        },
      ],
      "parent": "cloud.backend",
      "position": [
        546,
        651,
      ],
      "shape": "storage",
      "size": {
        "height": 180,
        "width": 354,
      },
      "title": "Backend Storage",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud.frontend",
          "isDescedants": true,
        },
        {
          "element": "cloud.backend",
          "isDescedants": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud.frontend",
          "isDescedants": false,
        },
      ],
      "isInclude": false,
    },
  ],
  "title": "",
  "viewOf": "cloud",
  "width": 978,
}
`;

exports[`dotLayout: >  computedCloudView 1`] = `
{
  "autoLayout": "TB",
  "boundingBox": {
    "height": 793,
    "width": 1072,
    "x": 0,
    "y": 0,
  },
  "edges": [
    {
      "headArrow": [
        [
          701,
          399,
        ],
        [
          711,
          403,
        ],
        [
          701,
          406,
        ],
      ],
      "id": "cloud.frontend:cloud.backend",
      "label": "fetches data",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            589,
            393,
          ],
          "text": "fetches data",
          "width": 73,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          540,
          403,
        ],
        [
          591,
          403,
        ],
        [
          649,
          403,
        ],
        [
          701,
          403,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "headArrow": [
        [
          878,
          600,
        ],
        [
          875,
          609,
        ],
        [
          872,
          600,
        ],
      ],
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            875,
            556,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          875,
          493,
        ],
        [
          875,
          527,
        ],
        [
          875,
          565,
        ],
        [
          875,
          600,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          312,
          300,
        ],
        [
          315,
          310,
        ],
        [
          307,
          304,
        ],
      ],
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            270,
            244,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          223,
          181,
        ],
        [
          250,
          219,
        ],
        [
          281,
          263,
        ],
        [
          309,
          302,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          452,
          304,
        ],
        [
          444,
          310,
        ],
        [
          447,
          300,
        ],
      ],
      "id": "support:cloud.frontend",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            496,
            244,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          536,
          181,
        ],
        [
          509,
          219,
        ],
        [
          478,
          263,
        ],
        [
          450,
          302,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
  ],
  "height": 793,
  "id": "cloudView",
  "nodes": [
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloud3levels",
      "parent": null,
      "position": [
        192,
        261,
      ],
      "shape": "rectangle",
      "size": {
        "height": 258,
        "width": 870,
      },
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            122,
            95,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            109,
            74,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            32,
            104,
          ],
          "text": "Support engineers are responsible for supporting",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            146,
            120,
          ],
          "text": "customers",
          "width": 62,
        },
      ],
      "parent": null,
      "position": [
        420,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 358,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            126,
            82,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            78,
            112,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        715,
        613,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            123,
            94,
          ],
          "text": "Frontend",
          "width": 70,
        },
      ],
      "parent": "cloud",
      "position": [
        219,
        313,
      ],
      "shape": "browser",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Frontend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            124,
            94,
          ],
          "text": "Backend",
          "width": 68,
        },
      ],
      "parent": "cloud",
      "position": [
        715,
        313,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Backend",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "cloud",
  "width": 1072,
}
`;

exports[`dotLayout: >  computedIndexView 1`] = `
{
  "autoLayout": "TB",
  "boundingBox": {
    "height": 782,
    "width": 778,
    "x": 0,
    "y": 0,
  },
  "edges": [
    {
      "headArrow": [
        [
          382,
          588,
        ],
        [
          379,
          597,
        ],
        [
          376,
          588,
        ],
      ],
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            379,
            545,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          379,
          481,
        ],
        [
          379,
          515,
        ],
        [
          379,
          553,
        ],
        [
          379,
          588,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          310,
          289,
        ],
        [
          312,
          298,
        ],
        [
          304,
          292,
        ],
      ],
      "id": "customer:cloud",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            276,
            244,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          226,
          181,
        ],
        [
          251,
          215,
        ],
        [
          280,
          255,
        ],
        [
          306,
          290,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          454,
          292,
        ],
        [
          446,
          298,
        ],
        [
          449,
          289,
        ],
      ],
      "id": "support:cloud",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            495,
            244,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          533,
          181,
        ],
        [
          508,
          215,
        ],
        [
          479,
          255,
        ],
        [
          453,
          290,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
  ],
  "height": 782,
  "id": "index",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            122,
            95,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            109,
            74,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            32,
            104,
          ],
          "text": "Support engineers are responsible for supporting",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            146,
            120,
          ],
          "text": "customers",
          "width": 62,
        },
      ],
      "parent": null,
      "position": [
        420,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 358,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            137,
            95,
          ],
          "text": "cloud",
          "width": 42,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        219,
        301,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            126,
            82,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            78,
            111,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        219,
        602,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "width": 778,
}
`;
